@startuml

title __PROJECT's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Degrees {
    }
  }
  

  namespace sample {
    class sample.Lecturer {
    }
  }
  

  namespace sample {
    class sample.LecturerSubject {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Person {
    }
  }
  

  namespace sample {
    class sample.Student {
    }
  }
  

  namespace sample {
    class sample.StudentSubject {
    }
  }
  

  namespace sample {
    class sample.Subject {
    }
  }
  

  sample.Lecturer -up-|> sample.Person
  sample.Lecturer o-- sample.LecturerSubject : Sub
  sample.LecturerSubject -up-|> sample.Subject
  sample.Student -up-|> sample.Person
  sample.StudentSubject -up-|> sample.Subject
  sample.StudentSubject o-- sample.Degrees : D


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
